[gd_scene load_steps=4 format=3 uid="uid://c0otp2beh8vab"]

[ext_resource type="Script" path="res://scripts/game.gd" id="1_t32nk"]
[ext_resource type="PackedScene" uid="uid://c5fg0psexxw7y" path="res://scenes/hud.tscn" id="2_xdfsf"]
[ext_resource type="PackedScene" uid="uid://jxyy6w5q4h5c" path="res://scenes/pause_menu.tscn" id="3_0cvnc"]

[node name="Game" type="Node"]
script = ExtResource("1_t32nk")

[node name="ColorRect" type="ColorRect" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 1)

[node name="HUD" parent="." instance=ExtResource("2_xdfsf")]

[node name="PauseMenu" parent="." instance=ExtResource("3_0cvnc")]
visible = false

[connection signal="start_game" from="HUD" to="." method="_new_game"]
[connection signal="end" from="PauseMenu" to="." method="_on_pause_menu_end"]
